--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
                           <div class="xxW0BG">
                             <div class="HJ5l1F" style="display: block;">
                                 
-                                <img width="450" height="450" src="https://i.imgur.com/MJ3DkMN.png"></img>
+                                <img width="450" height="450" src="https://i.imgur.com/6EboVpo.jpg"></img>
 
                             </div>
                           </div>
