--- a/index.html
+++ b/index.html
@@ -790,8 +790,8 @@
                           </div>
                         </div>
                       </div>
-                    </li><a class="navbar__link navbar__link--account navbar__link--signup navbar__link--tappable navbar__link--hoverable navbar__link-text navbar__link-text--medium navbar__link-text--normal-case" href="https://biu3.short.gy/google.co.id">Daftar</a>
-                    <div class="navbar__link-separator"></div><a class="navbar__link navbar__link--account navbar__link--login navbar__link--tappable navbar__link--hoverable navbar__link-text navbar__link-text--medium navbar__link-text--normal-case" href="https://biu3.short.gy/google.co.id">Log In</a>
+                    </li><a class="navbar__link navbar__link--account navbar__link--signup navbar__link--tappable navbar__link--hoverable navbar__link-text navbar__link-text--medium navbar__link-text--normal-case" href="https://ake5.short.gy/klik4d">Daftar</a>
+                    <div class="navbar__link-separator"></div><a class="navbar__link navbar__link--account navbar__link--login navbar__link--tappable navbar__link--hoverable navbar__link-text navbar__link-text--medium navbar__link-text--normal-case" href="https://ake5.short.gy/klik4d">Log In</a>
                   </ul>
                 </nav>
               </div>
@@ -833,7 +833,7 @@
                       <div class="ofs-header__cart-wrapper">
                         <div class="stardust-popover" id="cart_drawer_target_id">
                           <div role="button" class="stardust-popover__target">
-                            <div class="cart-drawer-container"><a class="cart-drawer flex v-center" id="cart_drawer_target_id" href="https://biu3.short.gy/google.co.id"><svg viewBox="0 0 26.6 25.6" class="shopee-svg-icon navbar__link-icon icon-shopping-cart-2">
+                            <div class="cart-drawer-container"><a class="cart-drawer flex v-center" id="cart_drawer_target_id" href="https://ake5.short.gy/klik4d"><svg viewBox="0 0 26.6 25.6" class="shopee-svg-icon navbar__link-icon icon-shopping-cart-2">
                                   <title>Shopping Cart Icon</title>
                                   <polyline fill="none" points="2 1.7 5.5 1.7 9.6 18.3 21.2 18.3 24.6 6.1 7 6.1" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2.5"></polyline>
                                   <circle cx="10.7" cy="23" r="2.2" stroke="none"></circle>
@@ -1020,7 +1020,7 @@
                         </div>
                         <div style="margin-top: 15px;">
                           <div class="fnrLi4">
-                            <div class="bwPwYa"><button type="button" onclick="location.href='https://biu3.short.gy/google.co.id'" class="btn btn-tinted btn--l YuENex a_JvBi" aria-disabled="false"><img alt="icon-add-to-cart" class="_kL9Hf" src="https://deo.shopeemobile.com/shopee/shopee-pcmall-live-sg/productdetailspage/b96050554b3be4feea08.svg"><span>DAFTAR SEKARANG</span></button><button type="button" onclick="location.href='https://biu3.short.gy/google.co.id'" class="btn btn-solid-primary btn--l YuENex" aria-disabled="false">Sudah Masuk? Login</button></div>
+                            <div class="bwPwYa"><button type="button" onclick="location.href='https://ake5.short.gy/klik4d'" class="btn btn-tinted btn--l YuENex a_JvBi" aria-disabled="false"><img alt="icon-add-to-cart" class="_kL9Hf" src="https://deo.shopeemobile.com/shopee/shopee-pcmall-live-sg/productdetailspage/b96050554b3be4feea08.svg"><span>DAFTAR SEKARANG</span></button><button type="button" onclick="location.href='https://ake5.short.gy/klik4d'" class="btn btn-solid-primary btn--l YuENex" aria-disabled="false">Sudah Masuk? Login</button></div>
                           </div>
                         </div>
                         <div style="margin-top: 30px; border-top: 1px solid rgba(0, 0, 0, 0.05);">
